[project]
name = "meddraj-query-extraction"
version = "0.1.0"
description = "Code release for MedDRA/J search query extraction with PEFT-RL and distillation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.12.0",
  "bitsandbytes>=0.48.2",
  "datasets>=4.3.0",
  "evaluate>=0.4.6",
  "faiss-cpu>=1.13.1",
  "fuzzysearch>=0.8.1",
  "huggingface-hub[cli]>=0.24.0",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "joblib>=1.5.2",
  "numpy>=2.2.6",
  "openpyxl>=3.1.5",
  "optuna>=4.6.0",
  "pandas>=2.3.3",
  "peft>=0.18.0",
  "plotly>=6.5.0",
  "pytorch-crf>=0.7.2",
  "pyyaml>=6.0.3",
  "sentencepiece>=0.2.0",
  "streamlit>=1.52.1",
  "torch==2.9.0",
  "torchvision>=0.24.0",
  "transformers>=4.57.2",
  "trl>=0.24.0",
  "unsloth==2025.11.6",
  "unsloth-zoo>=2025.11.5",
  "vllm>=0.11.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
